updated new executives

--- a/Sponsor.html
+++ b/Sponsor.html
@@ -176,20 +176,20 @@
 
 
                     <div class="row">
-                        <div class="col-sm-3 animatable fadeInUp">
+                        <div class="col-sm-4 animatable fadeInUp">
                             <img src="./assets/img/sponsors/maceng.png" style="height: 100px">
                         </div>
-
-                        <div class="col-sm-3 animatable fadeInUp">
+                        <div class="col-sm-4 animatable fadeInUp">
                             <img src="./assets/img/sponsors/dji.jpg" style="height: 120px">
                         </div>
-
-                        <div class="col-sm-3 animatable fadeInUp">
+                        <div class="col-sm-4 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/mcmaster.png" style="height: 100px">
+                        </div>
+                        <div class="col-sm-6 animatable fadeInUp">
                             <img src="./assets/img/sponsors/nvidia.png" style="height: 120px">
                         </div>
-
-                        <div class="col-sm-3 animatable fadeInUp">
-                            <img src="./assets/img/sponsors/mcmaster.png" style="height: 100px">
+                        <div class="col-sm-6 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/atlassian.png" style="height: 120px">
                         </div>
 
                     </div>
@@ -199,9 +199,9 @@
                         <br />
                         <br />
                         <br />
-						<a href="./assets/files/MacRM_Sponsor_Package.pdf" target="_blank">
-							<input class="btn btn-danger btn-lg btn-fill" type="button" value="Sponsor Package" />
-						</a>
+                        <a href="./assets/files/MacRM_Sponsor_Package.pdf" target="_blank">
+                            <input class="btn btn-danger btn-lg btn-fill" type="button" value="Sponsor Package" />
+                        </a>
                     </div>
                 </div>
             </div>
@@ -221,61 +221,66 @@
 
             </div>
 
-        <!-- Donate Us -->
-        <div id="donate" class="section text-center container-fluid">
-            <div class="container animatable fadeInUp">
-                <h1 class="title">Why Sponsors Us</h1>
-                <div class="row animatable fadeInUp">
-                    <div class="col-md-12 ml-auto mr-auto">
-                        <h5 id="test" class="description animated">
-                            As an innovative engineering group which is specializing in designing, reframing and aiming
-                            to provide an unique experience of combining in-class theoriotical knowledge and practical
-                            field application in order to generate an opportunity for McMaster University students to
-                            explore their true talent and potential. With the great goal like this, we are in urgently
-                            demand of key stakeholders who are sharing the same vision and willing to participating in
-                            the process of assisting us achiving this goal!
-                        </h5>
+            <!-- Donate Us -->
+            <div id="donate" class="section text-center container-fluid">
+                <div class="container animatable fadeInUp">
+                    <h1 class="title">Why Sponsors Us</h1>
+                    <div class="row animatable fadeInUp">
+                        <div class="col-md-12 ml-auto mr-auto">
+                            <h5 id="test" class="description animated">
+                                As an innovative engineering group which is specializing in designing, reframing and
+                                aiming
+                                to provide an unique experience of combining in-class theoriotical knowledge and
+                                practical
+                                field application in order to generate an opportunity for McMaster University students
+                                to
+                                explore their true talent and potential. With the great goal like this, we are in
+                                urgently
+                                demand of key stakeholders who are sharing the same vision and willing to participating
+                                in
+                                the process of assisting us achiving this goal!
+                            </h5>
+                        </div>
+
+                        <div class="col-md-12 ml-auto mr-auto">
+                            <img src="./assets/img/logo_master.png" alt="" style="width:50%">
+                        </div>
+
+                        <div class="col-md-12 ml-auto mr-auto">
+                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                <input type="hidden" name="cmd" value="_s-xclick" />
+                                <input type="hidden" name="hosted_button_id" value="TMVJUH3SEQBGL" />
+                                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
+                                    border="0" name="submit" alt="Donate with PayPal button" />
+                                <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1"
+                                    height="1" />
+                            </form>
+                            <br />
+                            <br />
+
+                        </div>
+
+                        <div class="col-md-12 ml-auto mr-auto">
+                            <img src="./assets/img/donate_qr.png" alt="" style="width:30%">
+                            <p>Or scan the above QR Code!</p>
+                            <br />
+                            <br />
+                        </div>
+                        <div class="col-md-12 ml-auto mr-auto">
+                            <a href="./assets/files/MacRM_Sponsor_Package.pdf" target="_blank">
+                                <input class="btn btn-danger btn-lg btn-fill" type="button" value="Sponsor Package" />
+                            </a>
+                        </div>
+
+
                     </div>
-
-                    <div class="col-md-12 ml-auto mr-auto">
-                        <img src="./assets/img/logo_master.png" alt="" style="width:50%">
-                    </div>
-
-                    <div class="col-md-12 ml-auto mr-auto">
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                            <input type="hidden" name="cmd" value="_s-xclick" />
-                            <input type="hidden" name="hosted_button_id" value="TMVJUH3SEQBGL" />
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
-                                border="0" name="submit" alt="Donate with PayPal button" />
-                            <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1"
-                                height="1" />
-                        </form>
-                        <br />
-                        <br />
-
-                    </div>
-
-                    <div class="col-md-12 ml-auto mr-auto">
-                        <img src="./assets/img/donate_qr.png" alt="" style="width:30%">
-                        <p>Or scan the above QR Code!</p>
-                        <br />
-                        <br />
-                    </div>
-                    <div class="col-md-12 ml-auto mr-auto">
-                        <a href="./assets/files/MacRM_Sponsor_Package.pdf" target="_blank">
-							<input class="btn btn-danger btn-lg btn-fill" type="button" value="Sponsor Package" />
-						</a>
-                    </div>
-
-
                 </div>
             </div>
-        </div>
 
 
 
-        <!-- Join Us -->
-        <!-- <div id="join" class="section section-dark text-center container-fluid"
+            <!-- Join Us -->
+            <!-- <div id="join" class="section section-dark text-center container-fluid"
             style="background-image: url('assets/img/background.jpg')">
 
             <div class="container animatable fadeInUp">
@@ -301,8 +306,8 @@
                             If you are interested in this amazing oppotunity, feel free to come!
                         </h4>
                         <br> -->
-                        <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
-                    <!-- </div>
+            <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
+            <!-- </div>
                     <div class="col-md-12 ml-auto mr-auto">
                         <button class="btn btn-danger btn-lg btn-fill"
                             onclick="location.href='https://forms.gle/JUEgjrhdYf6NjDda6'" type="button">Apply
@@ -315,67 +320,67 @@
 
 
 
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <nav class="footer-nav">
-                        <ul>
-                            <li>
-                                <a class="nav-link" href="https://instagram.com/macrobomaster" target="_blank"><i
-                                        class="fab fa-instagram"></i></a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="https://facebook.com/MACRoboMaster" target="_blank"><i
-                                        class="fab fa-facebook-square"></i></a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="" target="_blank"><i class="fab fa-youtube"></i></a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster"
-                                    target="_blank"><i class="fab fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="credits ml-auto">
-                        <span class="copyright">
-                            &copy; 2019 MAC RoboMaster. All rights reserved.
-                        </span>
+            <!-- Footer -->
+            <footer class="footer">
+                <div class="container">
+                    <div class="row">
+                        <nav class="footer-nav">
+                            <ul>
+                                <li>
+                                    <a class="nav-link" href="https://instagram.com/macrobomaster" target="_blank"><i
+                                            class="fab fa-instagram"></i></a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="https://facebook.com/MACRoboMaster" target="_blank"><i
+                                            class="fab fa-facebook-square"></i></a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="" target="_blank"><i class="fab fa-youtube"></i></a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster"
+                                        target="_blank"><i class="fab fa-linkedin"></i></a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="credits ml-auto">
+                            <span class="copyright">
+                                &copy; 2019 MAC RoboMaster. All rights reserved.
+                            </span>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
 
-        <!-- smooth scroll -->
-        <script>
-            $(document).ready(function () {
-                // Add scrollspy to <body>
-                $('body').scrollspy({ target: ".navbar", offset: 50 });
+            <!-- smooth scroll -->
+            <script>
+                $(document).ready(function () {
+                    // Add scrollspy to <body>
+                    $('body').scrollspy({ target: ".navbar", offset: 50 });
 
-                // Add smooth scrolling on all links inside the navbar
-                $("#myNavbar a").on('click', function (event) {
-                    // Make sure this.hash has a value before overriding default behavior
-                    if (this.hash !== "") {
-                        // Prevent default anchor click behavior
-                        event.preventDefault();
+                    // Add smooth scrolling on all links inside the navbar
+                    $("#myNavbar a").on('click', function (event) {
+                        // Make sure this.hash has a value before overriding default behavior
+                        if (this.hash !== "") {
+                            // Prevent default anchor click behavior
+                            event.preventDefault();
 
-                        // Store hash
-                        var hash = this.hash;
+                            // Store hash
+                            var hash = this.hash;
 
-                        // Using jQuery's animate() method to add smooth page scroll
-                        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-                        $('html, body').animate({
-                            scrollTop: $(hash).offset().top
-                        }, 800, function () {
+                            // Using jQuery's animate() method to add smooth page scroll
+                            // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+                            $('html, body').animate({
+                                scrollTop: $(hash).offset().top
+                            }, 800, function () {
 
-                            // Add hash (#) to URL when done scrolling (default click behavior)
-                            window.location.hash = hash;
-                        });
-                    }  // End if
+                                // Add hash (#) to URL when done scrolling (default click behavior)
+                                window.location.hash = hash;
+                            });
+                        }  // End if
+                    });
                 });
-            });
-        </script>
+            </script>
 
 
 </body>
