added team member profiles

--- a/Team.html
+++ b/Team.html
@@ -172,6 +172,26 @@
                     <h1 class="title animatable fadeInUp">Our Team</h1>
                     <h2 class="title animatable fadeInUp">Executives</h2>
                     <div class="row">
+                        <!-- Haotian Zhu -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="" target="_blank">
+                                        <img src="./assets/img/faces/haotian.jpg" alt="...">
+                                    </a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Haotian Zhu</h4>
+                                            <h6 class="card-category">Project Manager</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Valentyn Borysov -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
@@ -270,6 +290,25 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Uday Sharma -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="https://www.linkedin.com/in/uday-sharma/" target="_blank">
+                                        <img src="./assets/img/faces/uday.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Uday Sharma</h4>
+                                            <h6 class="card-category">Computer Vision Lead</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Edward Yu -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
@@ -289,6 +328,7 @@
                                     </p>
                                 </div>
                             </div>
+
                         </div>
                         <!-- Kino Song -->
                         <div class="col-md-4 animatable fadeInUp">
@@ -309,6 +349,7 @@
                                 </div>
                             </div>
                         </div>
+
 
 
                     </div>
