updated profile photo

--- a/Team.html
+++ b/Team.html
@@ -176,12 +176,12 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="" target="_blank">
-                                        <img src="./assets/img/faces/haotian.jpg" alt="...">
+                                    <a href="https://www.linkedin.com/in/zhuh50/" target="_blank">
+                                        <img src="./assets/img/faces/john.jpg" alt="...">
                                     </a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Haotian Zhu</h4>
                                             <h6 class="card-category">Project Manager</h6>
@@ -196,14 +196,14 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/vborysov/" target="_blank">
-                                        <img src="./assets/img/faces/val.jpg" alt="...">
+                                    <a href="https://www.linkedin.com/in/jianzhao-wang-359978149/" target="_blank">
+                                        <img src="./assets/img/faces/joe.jpg" alt="...">
                                     </a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
-                                            <h4 class="card-title">Valentyn Borysov</h4>
+                                            <h4 class="card-title">Joe Wang</h4>
                                             <h6 class="card-category">Mechanical Lead</h6>
                                         </div>
                                     </a>
@@ -221,7 +221,7 @@
                                     </a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Alison Ao</h4>
                                             <h6 class="card-category">Mechanical Lead</h6>
@@ -241,7 +241,7 @@
                                     </a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Raghib Quader</h4>
                                             <h6 class="card-category">Control Lead</h6>
@@ -256,10 +256,10 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/helen.jpg" alt="..."></a>
+                                    <a><img src="./assets/img/faces/helen.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Helen Shelton</h4>
                                             <h6 class="card-category">Business Lead</h6>
@@ -279,7 +279,7 @@
                                     </a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Jinge Li</h4>
                                             <h6 class="card-category">Computer Vision Lead</h6>
@@ -298,7 +298,7 @@
                                         <img src="./assets/img/faces/uday.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Uday Sharma</h4>
                                             <h6 class="card-category">Computer Vision Lead</h6>
@@ -318,7 +318,7 @@
                                     </a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Edward Yu</h4>
                                             <h6 class="card-category">Manager</h6>
@@ -338,7 +338,7 @@
                                         <img src="./assets/img/faces/kino.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Kino Song</h4>
                                             <h6 class="card-category">Promotion Lead</h6>
@@ -360,10 +360,10 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/yaser.jpg" alt="..."></a>
+                                    <a><img src="./assets/img/faces/yaser.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Dr. Yaser Haddara</h4>
                                             <h6 class="card-category">Associate Professor</h6>
@@ -379,10 +379,10 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/davidsontim.jpg" alt="..."></a>
+                                    <a><img src="./assets/img/faces/davidsontim.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Dr. Tim Davidson</h4>
                                             <h6 class="card-category">Department Chair</h6>
@@ -398,10 +398,10 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/sirouspour.jpg" alt="..."></a>
+                                    <a><img src="./assets/img/faces/sirouspour.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
-                                    <a href="#paper-kit">
+                                    <a>
                                         <div class="author">
                                             <h4 class="card-title">Dr. Shahin Sirouspour</h4>
                                             <h6 class="card-category">Professor</h6>
@@ -419,7 +419,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/shirani.jpg" alt="..."></a>
+                                    <a><img src="./assets/img/faces/shirani.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
@@ -439,7 +439,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="#avatar"><img src="./assets/img/faces/huawei.jpg" alt="..."></a>
+                                    <a><img src="./assets/img/faces/huawei.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a href="#paper-kit">
