--- a/apply.html
+++ b/apply.html
@@ -58,7 +58,7 @@
                         <a href="./Team.html" class="nav-link"><i></i> Team</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./Sponsors.html" class="nav-link"><i></i> Sponsors</a>
+                        <a href="./Sponsor.html" class="nav-link"><i></i> Sponsors</a>
                     </li>
                     <li class="nav-item">
                         <a href="./Contact.html" class="nav-link"><i></i> Contact</a>
@@ -159,13 +159,13 @@
                                 If you are interested in this amazing oppotunity, feel free to come!
                             </h4>
                             <br>
-                            <a href="#paper-kit" class="btn btn-danger btn-round">Application Closed</a>
-                        </div>
+                            <!-- <a href="#paper-kit" class="btn btn-danger btn-round">Application Closed</a>
+                        </div> -->
 
-                        <!-- <div class="col-md-12 ml-auto mr-auto">
-                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
+                        <div class="col-md-12 ml-auto mr-auto">
+                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://forms.gle/MaYZQz83KmbevSfQA'"
                             type="button">Apply Now</button>
-                    </div> -->
+                    </div>
                     </div>
 
                     <!-- <div class="row">
