--- a/Contact.html
+++ b/Contact.html
@@ -379,7 +379,7 @@
                                         class="fab fa-facebook-square"></i></a>
                             </li>
                             <li>
-                                <a class="nav-link" href="" target="_blank"><i class="fab fa-youtube"></i></a>
+                                <a class="nav-link" href="https://www.youtube.com/channel/UCUXVhB4hOqwW6mYe6Jd7yig" target="_blank"><i class="fab fa-youtube"></i></a>
                             </li>
                             <li>
                                 <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster"
