--- a/apply.html
+++ b/apply.html
@@ -162,13 +162,14 @@
                             <!-- <a href="#paper-kit" class="btn btn-danger btn-round">Application Closed</a>
                         </div> -->
 
-                        <div class="col-md-12 ml-auto mr-auto">
-                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://forms.gle/MaYZQz83KmbevSfQA'"
-                            type="button">Apply Now</button>
-                    </div>
-                    </div>
+                            <div class="col-md-12 ml-auto mr-auto">
+                                <button class="btn btn-danger btn-lg btn-fill"
+                                    onclick="location.href='https://forms.gle/MaYZQz83KmbevSfQA'" type="button">Apply
+                                    Now</button>
+                            </div>
+                        </div>
 
-                    <!-- <div class="row">
+                        <!-- <div class="row">
                         <div class="embed-responsive embed-responsive-10by19">
 							<iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">Loading…</iframe>
                             <script src="assets/js/google-form-styler.js"
@@ -176,73 +177,74 @@
                                 </script>
                         </div>
                     </div> -->
-                </div>
-            </div>
-
-        </div>
-
-
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <nav class="footer-nav">
-                        <ul>
-                            <li>
-                                <a class="nav-link" href="https://instagram.com/macrobomaster" target="_blank"><i
-                                        class="fab fa-instagram"></i></a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="https://facebook.com/MACRoboMaster" target="_blank"><i
-                                        class="fab fa-facebook-square"></i></a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="" target="_blank"><i class="fab fa-youtube"></i></a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster"
-                                    target="_blank"><i class="fab fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="credits ml-auto">
-                        <span class="copyright">
-                            &copy; 2020 MAC RoboMaster. All rights reserved.
-                        </span>
                     </div>
                 </div>
+
             </div>
-        </footer>
 
-        <!-- smooth scroll -->
-        <script>
-            $(document).ready(function () {
-                // Add scrollspy to <body>
-                $('body').scrollspy({ target: ".navbar", offset: 50 });
 
-                // Add smooth scrolling on all links inside the navbar
-                $("#myNavbar a").on('click', function (event) {
-                    // Make sure this.hash has a value before overriding default behavior
-                    if (this.hash !== "") {
-                        // Prevent default anchor click behavior
-                        event.preventDefault();
+            <!-- Footer -->
+            <footer class="footer">
+                <div class="container">
+                    <div class="row">
+                        <nav class="footer-nav">
+                            <ul>
+                                <li>
+                                    <a class="nav-link" href="https://instagram.com/macrobomaster" target="_blank"><i
+                                            class="fab fa-instagram"></i></a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="https://facebook.com/MACRoboMaster" target="_blank"><i
+                                            class="fab fa-facebook-square"></i></a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="https://www.youtube.com/channel/UCUXVhB4hOqwW6mYe6Jd7yig"
+                                        target="_blank"><i class="fab fa-youtube"></i></a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster"
+                                        target="_blank"><i class="fab fa-linkedin"></i></a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="credits ml-auto">
+                            <span class="copyright">
+                                &copy; 2020 MAC RoboMaster. All rights reserved.
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </footer>
 
-                        // Store hash
-                        var hash = this.hash;
+            <!-- smooth scroll -->
+            <script>
+                $(document).ready(function () {
+                    // Add scrollspy to <body>
+                    $('body').scrollspy({ target: ".navbar", offset: 50 });
 
-                        // Using jQuery's animate() method to add smooth page scroll
-                        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-                        $('html, body').animate({
-                            scrollTop: $(hash).offset().top
-                        }, 800, function () {
+                    // Add smooth scrolling on all links inside the navbar
+                    $("#myNavbar a").on('click', function (event) {
+                        // Make sure this.hash has a value before overriding default behavior
+                        if (this.hash !== "") {
+                            // Prevent default anchor click behavior
+                            event.preventDefault();
 
-                            // Add hash (#) to URL when done scrolling (default click behavior)
-                            window.location.hash = hash;
-                        });
-                    }  // End if
+                            // Store hash
+                            var hash = this.hash;
+
+                            // Using jQuery's animate() method to add smooth page scroll
+                            // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+                            $('html, body').animate({
+                                scrollTop: $(hash).offset().top
+                            }, 800, function () {
+
+                                // Add hash (#) to URL when done scrolling (default click behavior)
+                                window.location.hash = hash;
+                            });
+                        }  // End if
+                    });
                 });
-            });
-        </script>
+            </script>
 
 
 </body>
